--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ main .row{
     gap: 40px;
 }
 .my-name, .my-last-name{
-    font-size: 75px;
+    font-size: 5em;
     font-weight: 700;
     line-height: 20px;
     letter-spacing: 1.2px;
@@ -311,7 +311,8 @@ span.linkedin-brand{
     place-items: center;
     width: 328px;
     height: 328px;
-    max-width: 90vw;
+    max-width: 75vw;
+    max-height: 75vw;
     border: 1px solid #4F4F4F;
     border-radius: 50%;
     background: #FFF;
@@ -329,7 +330,6 @@ span.linkedin-brand{
     color: #1E0D39;
 }
 .paragraph-about-me{
-    max-height: 30vh;
     font-weight: 400;
     color: #fff;
     overflow: auto;
@@ -366,6 +366,8 @@ span.linkedin-brand{
     justify-content: center;
     width: 75px;    
     height: 75px;
+    min-width: 75px;
+    min-height: 75px;
     border-radius: 50%;
     background-color: #652ab8;
     scale: 1;
@@ -396,25 +398,60 @@ span.linkedin-brand{
     opacity: 1;
 }
 
-@media (min-width: 768px){
-    .paragraph-about-me{
-        max-height: none;
-    }
-    #about .row{
-        gap: 0;
-    }
-}
 @media (orientation: landscape){
     main {
         padding-top: 8em;
     }
 }
-
-@media screen and (max-width: 756px) {
+@media (max-width: 380px) {
+    main{
+        padding-top: 8em;
+        padding-bottom: 3em;
+    }
+    .text-content-main{
+        gap: 35px;
+    }
+    .my-last-name, .my-name{
+        font-size: 3.5em;
+        line-height: 3px;
+    }
+    .career{
+        font-size: 18px;
+    }
+    span.buttons{
+        gap: .8em;
+        margin-top: 3.5em;
+    }
+    .download-cv-btn, .linkedin-btn{
+        max-width: 130px;
+    }
+    #about{
+        padding-top: 3em;
+        padding-bottom: 3em ;
+    }
+}
+@media (min-width:380.1px) and (max-width: 440px) {
+    .my-last-name, .my-name{
+        font-size: 4.5em;
+        line-height: 10px;
+    }
+    .career{
+        font-size: 22px;
+    }
+    .download-cv-btn, .linkedin-btn{
+        max-width: 140px;
+    }   
+}
+@media (max-width: 756px) {
     main .row{
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+}
+@media (min-width: 768px){
+    #about .row{
+        gap: 0;
     }
 }
 @media (min-width: 1100px) {
