--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ header{
     opacity: 1;
     z-index: 9;
     background-color: #1e0d39;
-    transition: opacity .5s, all 1.5s ease;
+    transition: opacity .5s, all 1s ease-out;
 }
 .disable-scrolling {
     overflow: hidden;
@@ -89,7 +89,7 @@ nav{
     top: 50%;
     display: none;
     transform: translate(-50%, -50%);
-    transition: 1s ease;
+    transition: .5s ease;
 }
 .brand{
     font-size: 30px;
@@ -391,8 +391,7 @@ span.linkedin-brand{
     background-color: var(--dark-purple);
     border: 1.5px solid var(--first-tone-purple);
     border-radius: 5px;
-    z-index: 9;
-    transition: 1s ease-out;
+    transition: .5s ease-out;
 }
 .skill-case:hover .tooltip-title{
     opacity: 1;
