--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
     align-items: center;
     justify-content: center;
     padding: 16px 10px;
+    cursor: pointer;
 }
 .slash{
     position: relative;
@@ -210,8 +211,9 @@ main .row{
 }
 .career{
     font-size: 24px;
-    font-weight: 700;
+    font-weight: 650;
     color: #828282;
+    z-index: 999;
 }
 span.buttons{
     display: flex;
@@ -228,11 +230,12 @@ button.download-cv-btn{
     scale: 1;
     color: #fff;
     background-color: var(--first-tone-purple);
+    z-index: 999;
     transition: .8s ease;
 }
 .download-cv-btn:hover{
     scale: 1.05;
-    background-color: #652ab8ce;
+    background-color: #3d0d80;
 }
 button.linkedin-btn{
     position: relative;
@@ -246,6 +249,7 @@ button.linkedin-btn{
     overflow: hidden;
     cursor: pointer;
     background-color: transparent;
+    z-index: 999;
     transition: 1s all ease;
 }
 button.linkedin-btn span{
@@ -259,7 +263,7 @@ button.linkedin-btn img{
     position: absolute;
     left: 10px;
     height: 25px;
-    z-index:5;
+    z-index:999;
     transition: 1s all ease;
 }
 .linkedin-btn::before{
