Refactor: Remove particles animation from one of the sections.
The particle animation has been removed from one of the sections to improve performance on weaker devices, which were experiencing performance issues.

--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@
 .color-light-purple{
     color: var(--first-tone-purple);
 }
-.animated-bg,
-.animated-bg-2{
+.animated-bg{
     position: absolute;
     display: block;
     top: 0; bottom: 0;
