--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ span.linkedin-brand{
     color: var(--dark-purple);
 }
 .site-description{
-    text-align: start;
+    text-align: justify;
     font-size: 16px;
     font-weight: 300;
     color: #d0cece;
@@ -466,39 +466,64 @@ span.linkedin-brand{
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 0;
     justify-content: center;
+    gap: 0;
 }
 
-.link-visit-site{
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1.5em;
-    font-size: 18px;
-    font-weight: 300;
-    color: var(--dark-purple);
-    transition: .8s ease;
+.project-buttons{
+    margin-top: 50px;
 }
-.link-visit-site::before{
+
+.site-link, .github-link{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 140px;
+    height: 40px;
+    text-decoration: none;
+    color: #d0cecedc;
+    border-radius: 5px;
+    overflow: hidden;
+    transition: all .8s ease;
+}
+.site-link{
+    box-shadow: 0 0 0 0 var(--third-tone-purple);
+    background-color: var(--third-tone-purple);
+}
+.github-link{
+    border: 1px solid var(--dark-purple);
+    background-color: transparent;
+}
+.site-link .visit-link,
+.github-link:hover .visit-link{
+    color: var(--first-tone-purple);
+}
+.github-link .visit-link{
+    color: var(--third-tone-purple);
+}
+.visit-link{
+    z-index: 2;
+    transition: .5s ease;
+}
+.github-link::before{
     content: '';
     position: absolute;
     left: 50%;
-    bottom: 1px;
-    transform: translate(-50%);
-    width: 0;
-    height: .8px;
-    background-color: #fff;
-    transition: .8s ease-out;
+    bottom: 0;
+    transform: translate(-50%, 0);
+    width: 100%;
+    height: 0;
+    background-color: var(--third-tone-purple);
+    z-index: 1;
+    transition: .8s ease;
 }
-.link-visit-site:hover::before{
-    width: 105%;
-}
-.link-visit-site:hover{
-    color: #fff;
+.github-link:hover::before{
+    height: 100%;
+} 
+.site-link:hover{
+    box-shadow: 0 0 0 2px var(--third-tone-purple);
+    
 }
 
 #contact{
@@ -747,6 +772,10 @@ div.white-board-github{
     #about{
         padding-top: 3em;
         padding-bottom: 3em ;
+    }
+    .project-buttons{
+        flex-direction: column;
+        align-items: center;
     }
 }
 @media (min-width:380.1px) and (max-width: 440px) {
