--- a/style.css
+++ b/style.css
@@ -521,9 +521,8 @@ span.linkedin-brand{
 .github-link::before{
     content: '';
     position: absolute;
-    left: 50%;
+    left: 0;
     bottom: 0;
-    transform: translate(-50%, 0);
     width: 100%;
     height: 0;
     background-color: var(--third-tone-purple);
