--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
 .hamburger-icon{
     position: fixed;
     right: 10px;
+    top: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -84,6 +85,7 @@ header{
     padding: 10px 5px;
     padding-left: 15px;
     width: 100%;
+    min-height: 5vh;
     overflow: visible;
     opacity: 1;
     z-index: 999999;
