Style: Set a margin-top of 6px to the 'header-clickable-content' class when the page's width is larger than 768px for a better alignment

--- a/style.css
+++ b/style.css
@@ -847,6 +847,7 @@ div.white-board-github{
     .header-clickable-content{
         position: fixed;
         right: 1em;
+        margin-top: 6px;
         align-items: center; 
         gap: 30px;
     }
